
# The directory where the include files will be installed
libsolidincludedir = $(includedir)/SOLID

# Which header files to install
libsolidinclude_HEADERS = \
	SOLID.h \
	SOLID_broad.h \
	SOLID_types.h

noinst_HEADERS = \
	GEN_MinMax.h \
	GEN_random.h \
	MT_BBox.h \
	MT_Interval.h \
	MT_Matrix3x3.h \
	MT_Point3.h \
	MT_Quaternion.h \
	MT_Scalar.h \
	MT_ScalarTracer.h \
	MT_Transform.h \
	MT_Vector3.h \
	MT/Interval.h \
	MT/Matrix3x3.h \
	MT/Quaternion.h \
	MT/Transform.h \
	MT/Tuple3.h \
	MT/Tuple4.h \
	MT/Vector3.h \
	qhull/geom.h \
	qhull/io.h \
	qhull/mem.h \
	qhull/merge.h \
	qhull/poly.h \
	qhull/qhull_a.h \
	qhull/qhull.h \
	qhull/qset.h \
	qhull/stat.h \
	qhull/user.h 

