noinst_LTLIBRARIES = libqhull.la

libqhull_la_SOURCES = \
	user.c \
	global.c \
	stat.c \
	io.c \
	geom2.c \
	poly2.c \
	merge.c \
	qhull.c \
	geom.c \
	poly.c \
	qset.c \
	mem.c \
	geom.h \
	io.h \
	mem.h \
	merge.h \
	poly.h \
	qhull_a.h \
	qhull.h \
	qset.h \
	stat.h \
	user.h

AM_CFLAGS = -fno-strict-aliasing



